[tool.poetry]
name = "stt_web_app.py"
version = "0.1.0"
description = ""
authors = ["Mohammad Sharara <ms198mohammad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
pydub = "^0.25.1"
streamlit = "^1.12.0"
SpeechRecognition = "^3.8.1"
PyAudio = "^0.2.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
